--- a/go.html
+++ b/go.html
@@ -3,11 +3,11 @@
   <head>
     <meta
       name="go-import"
-      content="go.dagger.io/dagger git https://github.com/aluzzardi/dagger/sdk/go"
+      content="go-vanity-test.netlify.app/dagger git https://github.com/aluzzardi/dagger"
     />
     <meta
       name="go-source"
-      content="go.dagger.io/dagger     https://github.com/dagger/dagger https://github.com/dagger/dagger/tree/main/sdk/go{/dir} https://github.com/dagger/dagger/blob/main/sdk/go{/dir}/{file}#L{line}"
+      content="go-vanity-test.netlify.app/dagger     https://github.com/aluzzardi/dagger https://github.com/aluzzardi/dagger/tree/main/{/dir} https://github.com/aluzzardi/dagger/blob/main/{/dir}/{file}#L{line}"
     />
     <meta http-equiv="refresh" content="0; url=https://github.com/dagger/dagger">
   </head>
